Refactor project structure

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Showviewer</title>
   </head>
-  <body style="margin: 0px; margin-top: 58px">
+  <body style="margin: 0px;">
     <div id='root'></div>
   </body>
 </html>
