--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Showviewer</title>
   </head>
-  <body style="margin: 0px;">
-    <div id='root'></div>
+  <body style="margin: 0px; top: 0%; position: absolute; height: 100%; width: 100%">
+    <div id='root' style="top: 0; position: absolute; width: 100%; height: 100%"></div>
     <script src='src/index.js'></script>
   </body>
 </html>
