--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html style='font-family: Source Sans Pro, sans-serif;'>
+<html style='font-family: Source Sans Pro, sans-serif; height = 100%'>
   <head>
     <meta charset="utf-8">
     <title>Showviewer</title>
   </head>
-  <body style="margin: 0px; top: 0%; position: absolute; height: 100%; width: 100%">
-    <div id='root' style="top: 0; position: absolute; width: 100%; height: 100%"></div>
+  <body style="margin: 0px; top: 0%; position: absolute; width: 100%; height=100%">
+    <div id='root' style="top: 0; width: 100%; min-height: 100vh"></div>
     <script src='src/index.js'></script>
   </body>
 </html>
