--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
   </head>
   <body style="margin: 0px; top: 0%; position: absolute; width: 100%; height=100%">
     <div id='root' style="top: 0; width: 100%; min-height: 100vh"></div>
-    <script src='src/index.js'></script>
+    <script src='/src/index.js'></script>
   </body>
 </html>
