--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Showviewer</title>
+    <link rel='stylesheet' href='assets/bundle.css'>
   </head>
   <body style="margin: 0px; top: 0%; position: absolute; width: 100%; height=100%">
     <div id='root' style="top: 0; width: 100%; min-height: 100vh"></div>
-    <script src='/src/index.js'></script>
+    <script src='/assets/index.js'></script>
   </body>
 </html>
