Change series list page container layout

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Showviewer</title>
     <link rel='stylesheet' href='assets/bundle.css'>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+    </style>
   </head>
   <body style="margin: 0px; top: 0%; position: absolute; width: 100%; height=100%">
     <div id='root' style="top: 0; width: 100%; min-height: 100vh"></div>
